@@ -2124,10 +2124,10 @@ sub handle_dist_worker
 	-chmod 755 $(distdir)
 ';
 
-	# Only run automake in `dist' target if --include-deps not
-	# specified.  That way the recipient of a distribution can run
-	# "make dist" and not need Automake.
-	if ($cmdline_use_dependencies)
+	# Only run automake in `dist' target if --include-deps and
+	# `no-dependencies' not specified.  That way the recipient of
+	# a distribution can run "make dist" and not need Automake.
+	if ($use_dependencies)
 	{
 	    $output_rules .=
 		(
