@@ -1,5 +1,9 @@
 Thu Mar 27 17:28:47 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_dist_worker): Avoid automake rules in
+	generated Makefile when no-dependencies specified.  From Greg
+	Woods.
+
 	* m4/lispdir.m4: Don't AC_SUBST ELCFILES.  From Greg Woods.
 
 	* texi-vers.am (stamp-@VTI@): Make commands silent.
